--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Барбершоп "Бородинский"</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <button class="nav-main__toggle" type="button">Открыть меню</button>
 
             <div class="nav-main__wrapper">
-                <ul class="main-nav__list site-list">
+                <ul class="nav-main__list site-list">
                     <li class="site-list__item site-list__item--active">
                         <a>Главная</a>
                     </li>
