некоторые стили для шапки

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header class="header-main">
-        <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30" src="logo.svg"
+        <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30" src="img/logotype-mobile.svg.png"
                 alt="Логотип Барбершопа Бородинский"></a>
 
         <nav class="nav-main">
-            <button class="nav-main__toggle" type="button">Открыть меню</button>
+            <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
             <div class="nav-main__wrapper">
                 <ul class="nav-main__list site-list">
