адаптив шапки для мобильной версии

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30"
                 src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
 
-        <nav class="nav-main nav-main--closed">
+        <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
             <div class="nav-main__wrapper">
                 <ul class="nav-main__list site-list">
-                    <li class="site-list__item site-list__item--active">
+                    <li class="site-list__item site-list__item">
                         <a>Главная</a>
                     </li>
-                    <li class="site-list__item">
-                        <a href="index.html">Наши работы</a>
+                    <li class="site-list__item--active">
+                        <a href="index.htm">Наши работы</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Записаться</a>
@@ -230,7 +230,7 @@
         </div>
 
     </footer>
-
+    <script src="script/script.js"></script>
 </body>
 
 </html>
