--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <div class="nav-main__wrapper">
                 <ul class="nav-main__list site-list">
-                    <li class="site-list__item site-list__item">
-                        <a>Главная</a>
+                    <li class="site-list__item site-list__item--active">
+                        <a href="index.htm">Главная</a>
                     </li>
-                    <li class="site-list__item--active">
-                        <a href="index.htm">Наши работы</a>
+                    <li class="site-list__item">
+                        <a>Наши работы</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Записаться</a>
@@ -37,7 +37,7 @@
 
                 <ul class="nav-main__list user-list">
                     <li class="user-list__item">
-                        <a href="login.html">
+                        <a class="user-list__login" href="login.html">
                             <svg class="user-list__login-icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
                                 <polygon points="0,7 7,7 7,4.1 11,8 7,11.9 7,9.1 0,9 " />
