шапка фулл и статитстика для мобилы

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-main">
         <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30"
-                    src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
+                src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
         <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
@@ -59,32 +59,32 @@
                 <h2 class="visually-hidden">Статистика Барбершопа</h2>
                 <h2 class="stats__slogan">Стрижка у нас это выгодно!</h2>
                 <p class="stats__info">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
-                <small class="stats__legend stats__legeng--top">
-                    <sup>*</sup> — приведённые данные ложь
-                </small>
-                <small class="stats__legend stats__legeng--bottom">
+                <small class="stats__legend stats__legend--top">
                     <sup>*</sup> — приведённые данные ложь
                 </small>
             </header>
 
             <table class="stats__list">
                 <tr>
-                    <td class="stats-value">1 500 *</td>
-                    <td class="stats-field">рублей вложений</td>
+                    <td class="stats__value">1 500 <sup>*</sup></td>
+                    <td class="stats__field">рублей<br>вложений</td>
                 </tr>
                 <tr>
-                    <td class="stats-value">7 200</td>
-                    <td class="stats-field">секунд времени мастера</td>
+                    <td class="stats__value">7 200</td>
+                    <td class="stats__field">секунд<br>времени мастера</td>
                 </tr>
                 <tr>
-                    <td class="stats-value">90 000</td>
-                    <td class="stats-field">постриженных волос</td>
+                    <td class="stats__value">90 000</td>
+                    <td class="stats__field">постриженных<br>волос</td>
                 </tr>
                 <tr>
-                    <td class="stats-value">500 000 *</td>
-                    <td class="stats-field">лайков и комплиментов</td>
+                    <td class="stats__value">500 000 <sup>*</sup></td>
+                    <td class="stats__field">лайков и<br>комплиментов</td>
                 </tr>
             </table>
+            <small class="stats__legend stats__legend--bottom">
+                <sup>*</sup> — приведённые данные ложь
+            </small>
         </section>
 
         <section class="advantages">
