Статистика и резиновая шапка

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="index.htm">Главная</a>
                     </li>
                     <li class="site-list__item">
-                        <a>Наши работы</a>
+                        <a href="index.html">Наши работы</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Записаться</a>
@@ -56,7 +56,7 @@
 
         <section class="stats">
             <header class="stats__header">
-                <h2 class="visually-hidden">Статистика Барбершопа</h2>
+                <h1 class="visually-hidden">Статистика Барбершопа</h1>
                 <h2 class="stats__slogan">Стрижка у нас это выгодно!</h2>
                 <p class="stats__info">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
                 <small class="stats__legend stats__legend--top">
@@ -67,19 +67,19 @@
             <table class="stats__list">
                 <tr>
                     <td class="stats__value">1 500 <sup>*</sup></td>
-                    <td class="stats__field">рублей<br>вложений</td>
+                    <td class="stats__field">рублей<br> вложений</td>
                 </tr>
                 <tr>
                     <td class="stats__value">7 200</td>
-                    <td class="stats__field">секунд<br>времени мастера</td>
+                    <td class="stats__field">секунд<br> времени мастера</td>
                 </tr>
                 <tr>
                     <td class="stats__value">90 000</td>
-                    <td class="stats__field">постриженных<br>волос</td>
+                    <td class="stats__field">постриженных<br> волос</td>
                 </tr>
                 <tr>
                     <td class="stats__value">500 000 <sup>*</sup></td>
-                    <td class="stats__field">лайков и<br>комплиментов</td>
+                    <td class="stats__field">лайков и<br> комплиментов</td>
                 </tr>
             </table>
             <small class="stats__legend stats__legend--bottom">
