--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             вы — счастливый обладатель стильной стрижки-минутки</p>
                     </li>
                     <li class="advantages__item advantages__item--cool slider__item">
-                        <h3 class="advantages__title">Круто</h3>
+                        <h3 class="advantages__title advantages__title--scissors">Круто</h3>
                         <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду
                             футбола или кино. Во всяком случае внешне.
                         </p>
