--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantages__list slider__list">
                     <li class="advantages__item advantages__item--fast slider__item">
-                        <h3 class="advantages__title">Быстро</h3>
+                        <h3 class="advantages__title advantages__title--fast">Быстро</h3>
                         <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и
                             вы — счастливый обладатель стильной стрижки-минутки</p>
                     </li>
                     <li class="advantages__item advantages__item--cool slider__item">
-                        <h3 class="advantages__title advantages__title--scissors">Круто</h3>
+                        <h3 class="advantages__title advantages__title--cool">Круто</h3>
                         <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду
                             футбола или кино. Во всяком случае внешне.
                         </p>
                     </li>
                     <li class="advantages__item advantages__item--expensive slider__item">
-                        <h3 class="advantages__title">Дорого</h3>
+                        <h3 class="advantages__title advantages__title--expensive">Дорого</h3>
                         <p class="advantages__description">Наши мастера — профессионалы своего делаи не могут стоить
                             дёшево. К тому же, разве цена не даёт определённый статус?</p>
                     </li>
