--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <ul class="advantages__list slider__list">
                     <li class="advantages__item advantages__item--fast slider__item">
                         <h3 class="advantages__title advantages__title--fast">Быстро</h3>
-                        <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и
-                            вы — счастливый обладатель стильной стрижки-минутки</p>
+                        <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно<br>и
+                            Вы — счастливый обладатель стильной стрижки-минутки</p>
                     </li>
                     <li class="advantages__item advantages__item--cool slider__item">
                         <h3 class="advantages__title advantages__title--cool">Круто</h3>
@@ -114,9 +114,14 @@
                     <button class="slider__toggle" type="button">3</button>
                 </p>
             </div>
+
         </section>
 
         <section class="news">
+            <svg version="1.1" width="100%" height="35px" xml:space="preserve" viewBox="0 0 100 35"
+                preserveAspectRatio="none">
+                <polygon fill="#242424" points="0,0 50,35 100,0" />
+            </svg>
             <div class="news__wrapper">
                 <h2 class="news__title">Новости и акции</h2>
                 <ul class="news__list">
