--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
                 <ul class="advantages__list slider__list">
                     <li class="advantages__item advantages__item--fast slider__item">
                         <h3 class="advantages__title advantages__title--fast">Быстро</h3>
-                        <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно<br>и
+                        <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно
+                            и
                             Вы — счастливый обладатель стильной стрижки-минутки</p>
                     </li>
-                    <li class="advantages__item advantages__item--cool slider__item">
+                    <li class="advantages__item advantages__item--cool slider__item item">
                         <h3 class="advantages__title advantages__title--cool">Круто</h3>
-                        <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду
+                        <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас
+                            звезду
                             футбола или кино. Во всяком случае внешне.
                         </p>
                     </li>
@@ -109,9 +111,9 @@
                     </li>
                 </ul>
                 <p class="advantages__toogle slider__toggles">
-                    <button class="slider__toggle" type="button">1</button>
-                    <button class="slider__toggle" type="button">2</button>
-                    <button class="slider__toggle" type="button">3</button>
+                    <input class="slider__toggle slider__toggle--active" type="checkbox">
+                    <input class="slider__toggle" type="checkbox">
+                    <input class="slider__toggle" type="checkbox">
                 </p>
             </div>
 
@@ -232,9 +234,10 @@
                 <a class="button copyright__link" href="https://htmlacademy.ru">HTML ACADEMY</a>
             </div>
         </div>
-
     </footer>
+    
     <script src="script/script.js"></script>
+
 </body>
 
 </html>
