Главная без подвала

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                     <blockquote class="reviews__item slider__item">
                         <p class="reviews__author-picture">
-                            <img class="reviews__author-image" src="img/travis-barker.jpg" width="50" height="33"
+                            <img class="reviews__author-image" src="img/travis-barker.jpg" width="50" height="49"
                                 alt="Фото Трэвиса Баркера">
                         </p>
                         <cite class="reviews__author-name">Трэвис Баркер</cite>
@@ -170,13 +170,14 @@
                             видно новую татуировку!</p>
                     </blockquote>
 
-                    <button class="reviews__next" type="button">Следующий отзыв</button>
-                    <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+                    <button class="reviews__next" type="button"><span>Следующий отзыв</span></button>
+                    <button class="reviews__prev" type="button"><span>Предыдущий отзыв</span></button>
 
                 </div>
 
                 <p class="reviews__toggles slider__toggles">
-                    <button class="slider__toggle slider__toggle--reviews .slider__toggle--active" type="button"><span>1</span></button>
+                    <button class="slider__toggle slider__toggle--reviews slider__toggle--active"
+                        type="button"><span>1</span></button>
                     <button class="slider__toggle slider__toggle--reviews" type="button"><span>2</span></button>
                     <button class="slider__toggle slider__toggle--reviews" type="button"><span>3</span></button>
                 </p>
@@ -185,6 +186,10 @@
     </main>
 
     <footer class="footer-main">
+        <svg version="1.1" width="100%" height="35px" xml:space="preserve" viewBox="0 0 100 35"
+            preserveAspectRatio="none">
+            <polygon fill="#242424" points="0,0 50,35 100,0" />
+        </svg>
         <div class="footer-main__wrapper">
             <div class="footer-main-contacts footer-contacts">
                 <b class="footer-contacts__title">Барбершоп Бородинский</b>
