подвал для мобилы

--- a/index.html
+++ b/index.html
@@ -194,24 +194,23 @@
             <div class="footer-main-contacts footer-contacts">
                 <b class="footer-contacts__title">Барбершоп Бородинский</b>
                 <p class="footer-contacts__text"> г. Санкт-Петербург, ул. Большая Конюшенная 19/8
-                    <br>
-                    <a class="contacts__phone" href="tel:+78125556666">
-                        <span class="contacts__phone-mobile">Тел.:</span> +7 (812) 555-66-66
-                    </a>
                 </p>
+                <a class="contacts__phone button" href="tel:+78125556666">
+                    <span class="contacts__phone-mobile">Тел.:</span> +7 (812) 555-66-66
+                </a>
             </div>
 
             <div class="footer-main__social-networks social">
-                <b class="social-title">Давайте дружить!</b>
+                <b class="social__title">Давайте дружить!</b>
                 <ul class="social__list">
                     <li class="social-item">
-                        <a class="social-link-vk" href="https://vk.com">Мы Вконтакте</a>
+                        <a class="social-link--vk" href="https://vk.com"><span class="visually-hidden">Мы Вконтакте</span></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link-facebook" href="https://www.facebook.com">Мы в Фейсбуке</a>
+                        <a class="social-link--facebook" href="https://www.facebook.com"><span class="visually-hidden">Мы в Фейсбуке</span></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link-instagram" href="https://www.instagram.com/?hl=ru">Мы в Инстаграме</a>
+                        <a class="social-link--instagram" href="https://www.instagram.com/?hl=ru"><span class="visually-hidden">Мы в Инстаграме</span></a>
                     </li>
                 </ul>
             </div>
