--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Барбершоп "Бородинский"</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -21,7 +22,7 @@
                         <a href="index.htm">Главная</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="index.html">Наши работы</a>
+                        <a href="photo.html">Наши работы</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Записаться</a>
