фотогалерея без измененного фона шапки - планшет

--- a/photo.html
+++ b/photo.html
@@ -56,8 +56,10 @@
         <h1 class="visually-hidden">Фотогалерея</h1>
 
         <section class="photogallery">
-            <h2 class="photogallery__title">Наши работы</h2>
-            <a class="photogallery__button button" href="index.html">На главную</a>
+            <div class="photogallery__wrapper-top">
+                <h2 class="photogallery__title">Наши работы</h2>
+                <a class="photogallery__button button" href="index.html">На главную</a>
+            </div>
             <ul class="photogallery__list">
                 
                 <li class="photogallery__item">
