--- a/photo.html
+++ b/photo.html
@@ -64,13 +64,13 @@
                 <h2 class="photogallery__title">Наши работы</h2>
                 <a class="photogallery__button button" href="index.html">На главную</a>
             </div>
-            <ul class="photogallery__list">
 
+            <ul class="photogallery__list">
                 <li class="photogallery__item">
                     <p class="photogallery__photo">
                         <img class="photogallery__photo-image" src="img/lzhepiotr-photo.jpg"
                             alt="Фото Лжепётра Мчиславского">
-                        <b class="photogallery__work-of-the-month">Работа месяца</b>
+                        <b class="photogallery__work-of-the-month"><span>Работа месяца</span></b>
                     </p>
                     <div class="photogallery__review">
                         <b class="photogallery__name">Лжепётр Мчиславский</b>
