запись на стрижку  для мобилы

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="nav-main__wrapper">
                 <ul class="nav-main__list site-list">
                     <li class="site-list__item site-list__item--active">
-                        <a href="index.htm">Главная</a>
+                        <a>Главная</a>
                     </li>
                     <li class="site-list__item">
                         <a href="photo.html">Наши работы</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="index.html">Записаться</a>
+                        <a href="form.html">Записаться</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Контакты</a>
