--- a/form.html
+++ b/form.html
@@ -3,27 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Запись на стрижку</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 
-<body>
+<body class="inner-page">
     <header class="header-main">
-        <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30" src="logo.svg"
-                alt="Логотип Барбершопа Бородинский"></a>
-
-        <nav class="nav-main">
-            <button class="nav-main__toggle" type="button">Открыть меню</button>
+        <a href="index.html" class="header-main__logo-link"><img class="header-index__logo-header" width="226"
+                height="30" src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
+        <nav class="nav-main nav-main--closed nav-main--no-js">
+            <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
             <div class="nav-main__wrapper">
-                <ul class="main-nav__list site-list">
+                <ul class="nav-main__list site-list">
+                    <li class="site-list__item">
+                        <a href="index.html">Главная</a>
+                    </li>
+                    <li class="site-list__item">
+                        <a href="photo.html">Наши работы</a>
+                    </li>
                     <li class="site-list__item site-list__item--active">
-                        <a>Главная</a>
-                    </li>
-                    <li class="site-list__item">
-                        <a href="index.html">Наши работы</a>
-                    </li>
-                    <li class="site-list__item">
-                        <a href="index.html">Записаться</a>
+                        <a href="form.html">Записаться</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Контакты</a>
@@ -35,12 +37,20 @@
 
                 <ul class="nav-main__list user-list">
                     <li class="user-list__item">
-                        <a href="login.html">Войти</a>
+                        <a class="user-list__login" href="login.html">
+                            <svg class="user-list__login-icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+                                <polygon points="0,7 7,7 7,4.1 11,8 7,11.9 7,9.1 0,9 " />
+                                <polygon points="7,0 7,2 14,2 14,14 7,14 7,16 16,16 16,0 " />
+                            </svg>
+                            Войти
+                        </a>
                     </li>
                 </ul>
             </div>
-
         </nav>
+
+        <img class="bg-cutter" src="img/bg-cutter.png" alt="Обрезка фона">
     </header>
 
     <main class="container">
@@ -49,23 +59,23 @@
             <h2 class="recording__form-title">Запись на стрижку</h2>
 
             <form class="recording__form" action="https://echo.htmlacademy.ru" method="GET">
-                <fieldset>
+                <fieldset class="recording__form-details contact-details">
                     <legend class="visually-hidden">Контактные данные</legend>
-                    <input class="recording__field" type="text" name="surname" placeholder="Фамилия">
+                    <input class="contact-details__recording-field recording-field-surname" type="" name="surname" placeholder="Фамилия">
                     <br>
-                    <input class="recording__field" type="text" name="name" placeholder="Имя">
+                    <input class="contact-details__recording-field recording__field recording__field--name" type="text" name="name" placeholder="Имя">
                     <br>
-                    <input class="recording__field" type="text" name="patronymic" placeholder="Отчество">
+                    <input class="contact-details__recording-field recording__field--patronymic" type="text" name="patronymic" placeholder="Отчество">
                     <br>
-                    <input class="recording__field" type="tel" name="tel" placeholder="Контактный телефон">
+                    <input class="contact-details__recording-field recording__field--tel" type="tel" name="tel" placeholder="Контактный телефон">
                     <br>
-                    <input class="recording__field" type="email" name="email" placeholder="Контактный e-mail">
+                    <input class="contact-details__recording-field recording__field--email" type="email" name="email" placeholder="Контактный e-mail">
                     <br>
-                    <textarea class="recording__extra-info" name="extra-info" id="" cols="30" rows="10"></textarea>
+                    <textarea class="contact-details__recording-field recording__field--extra-info" name="extra-info" id="extra-infp-id" placeholder="Доп. информация для мастера"></textarea>
                     <br>
                 </fieldset>
 
-                <fieldset>
+                <fieldset class="beard-model">
                     <legend>Выберите модель бороды:</legend>
                     <ul>
                         <li class="beard-model-item">
@@ -91,7 +101,7 @@
                     </ul>
                 </fieldset>
 
-                <fieldset>
+                <fieldset class="add-services">
                     <legend>Дополнительные услуги:</legend>
                     <ul>
                         <li class="extra-services-item">
@@ -158,6 +168,8 @@
                 </div>
             </div>
         </footer>
+
+        <script src="script/script.js"></script>
 
 </body>
 
