--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@
                         <a href="photo.html">Наши работы</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="index.html">Записаться</a>
+                        <a href="form.html">Записаться</a>
                     </li>
                     <li class="site-list__item">
                         <a href="index.html">Контакты</a>
@@ -130,8 +130,8 @@
                         </ul>
                     </div>
                 </li>
-
             </ul>
+            
         </section>
 
         <section class="price-list">
